--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 orjson==3.10.13
+PyAudio==0.2.14
 pydantic==2.10.4
 pydantic-extra-types==2.10.1
 pydantic-settings==2.7.1
