--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 annotated-types==0.7.0
 anyio==4.8.0
 certifi==2024.12.14
+cffi==1.17.1
 charset-normalizer==3.4.1
 click==8.1.8
 dnspython==2.7.0
@@ -18,8 +19,9 @@ Jinja2==3.1.5
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+numpy==2.2.1
 orjson==3.10.13
-PyAudio==0.2.11
+pycparser==2.22
 pydantic==2.10.4
 pydantic-extra-types==2.10.1
 pydantic-settings==2.7.1
@@ -34,6 +36,7 @@ rich==13.9.4
 rich-toolkit==0.12.0
 shellingham==1.5.4
 sniffio==1.3.1
+soundfile==0.13.0
 SpeechRecognition==3.13.0
 starlette==0.41.3
 typer==0.15.1
